recursion.cons.length.Length.scala.error
Erreur de compilation :
Length:4: error: not found: value list
  if(list.head == Nil){
     ^Length:10: error: not found: value list
    return 1 + length(list.tail);
                      ^