recursion.cons.length.Length.scala.code
def length(l:List[Int]): Int = {
  
  if(list.head == Nil){
    
    return 0;
    
  } else{
    
    return 1 + length(list.tail);
    
  }
  
}